# polygon-opengl-lab

./: CMakeLists.txt  README.md  main.cpp
